# telethon-api

./: .gitignore  main.py  pyproject.toml
telethon_api/: app.py
